Fleshing out Members Only Events page.

--- a/couples-league.html
+++ b/couples-league.html
@@ -111,7 +111,8 @@
             <div class="title-center-style-two">
               <h2 class="title">2025 Couple’s League Schedule</h2>
               <div class="schedule-note">
-                Check in is at 5:00pm and we shotgun at 6:00pm each Friday.
+                Check in is at 5:00pm and we shotgun at 6:00pm each Friday. $10
+                per couple for members, $20 per couple for non-members.
               </div>
             </div>
             <div class="col-lg-12">
@@ -121,18 +122,6 @@
                   <div class="right-area">
                     <p>
                       <span class="date">April 25th</span> - 1 Couple Scramble
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">April 16th</span> - Odds and Evens - 4
-                      players break into two scramble teams. High score odds /
-                      low score evens.
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -230,19 +219,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">June 18th</span> - 4 Man Shamble - Take
-                      3 scores.
-                    </p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
-                    <p>
-                      <span class="date">June 20th</span> - 2 Couple Scramble -
-                      Girls putt odd holes. Guys putt even holes.
+                      <span class="date">June 27th</span> - 2 Couple Scramble -
+                      Women putt odd holes, men putt even holes.
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -307,17 +285,8 @@
                 </div>
                 <div class="single-consulting-one">
                   <div class="right-area">
-                    <p><span class="date">August 8th</span> - 2 Couple Scramble</p>
-                  </div>
-                  <div class="timeline-dot">
-                    <div class="time-line-circle"></div>
-                  </div>
-                </div>
-                <div class="single-consulting-one">
-                  <div class="right-area">
                     <p>
-                      <span class="date">August 13th</span> - HELL NIGHT 4 Man
-                      Scramble
+                      <span class="date">August 8th</span> - 2 Couple Scramble
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -327,7 +296,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 20th</span> - 2 Man Scramble
+                      <span class="date">August 15th</span> - 1 Couple Modified
+                      Chapman - Chapman par 3's and 5's, shamble par 4's.
                     </p>
                   </div>
                   <div class="timeline-dot">
@@ -337,8 +307,19 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">August 27th</span> - Short Course 4 Man
-                      Scramble
+                      <span class="date">August 22nd</span> - 2 Couple Scramble
+                    </p>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
+                    <p>
+                      <span class="date">August 29th</span> - 1 Couple Modified
+                      Scramble - Scramble from 150 yards on par 4's & 5's,
+                      yellow tees on par 3's.
                     </p>
                   </div>
                   <div class="timeline-dot">
