--- a/index.html
+++ b/index.html
@@ -169,7 +169,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 mt-0">
+          <div
+            class="col-lg-6 mt-0 wow fadeInUp"
+            data-wow-offset="120"
+            data-wow-delay=".3s"
+          >
             <div class="slyder-container">
               <img src="images/slide-1.jpg" alt="" class="slyde active" />
               <img src="images/slide-2.jpg" alt="" class="slyde" />
@@ -262,7 +266,9 @@
                       <div>11:30 - 12:30pm</div>
                     </div>
                     <hr class="mt-5" />
-                    <p>Questions? Please, contact Chad Myers → (785) 539 - 1041.</p>
+                    <p>
+                      Questions? Please, contact Chad Myers → (785) 539 - 1041.
+                    </p>
                   </div>
                   <div class="row link-bar flex-row">
                     <div>Register your child</div>
@@ -454,8 +460,8 @@
                     All players must check in at the clubhouse prior to play.
                   </li>
                   <li>
-                    Bringing alcoholic beverages onto Stagg Hill
-                    property is prohibited by law.
+                    Bringing alcoholic beverages onto Stagg Hill property is
+                    prohibited by law.
                   </li>
                   <li>All golfers must have their own clubs and bag.</li>
                   <li>
@@ -490,6 +496,7 @@
       </div>
     </section>
     <!-- table of hours end -->
+
     <!-- businesses array start -->
     <section
       class="solution-expertice-area rts-section-gap bg-solution sponsors-section"
@@ -672,7 +679,7 @@
     <script defer src="assets/js/vendor/waw.js"></script>
     <script defer src="assets/js/vendor/jarallax.js"></script>
     <script defer src="assets/js/plugins/smooth-scroll.js"></script>
-   
+
     <script defer src="assets/js/plugins/metismenu.js"></script>
     <script defer src="assets/js/vendor/contact-form.js"></script>
     <script defer src="assets/js/vendor/bootstrap.min.js"></script>
@@ -683,7 +690,6 @@
       src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js?version=1"
       integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D"
       crossorigin="anonymous"
-      
       defer
     ></script>
   </body>
