--- a/ladies-evening-league.html
+++ b/ladies-evening-league.html
@@ -288,8 +288,8 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">July 31st</span> - 4 Scramble par 4’s &
-                      5’s and Shamble par 3’s - count 1 score on par 3’s.
+                      <span class="date">July 31st</span> - 4 Lady Scramble and Shamble - Scramble par 4’s &
+                      5’s and shamble par 3’s. Count 1 score on par 3’s.
                     </p>
                   </div>
                   <div class="timeline-dot">
