--- a/membership-fees.html
+++ b/membership-fees.html
@@ -360,8 +360,8 @@
               />The Sunflower Trail
             </h3>
             <div class="sft-intro">
-              <u>As a member of Stagg Hill Golf Club, you are a member of the
-                Sunflower Golf Trail.</u> This allows you to play the following
+              <span class="highlighted">As a member of Stagg Hill Golf Club, you are a member of the
+                Sunflower Golf Trail.</span> This allows you to play the following
               courses for $25-$35 and that includes a cart! Please, see the golf
               shop to get your Sunflower Trail card today so you can start
               traveling and playing some other great courses.
