Almost finished with Members Only Events page.

--- a/members-only-events.html
+++ b/members-only-events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Member's Only Events</title>
+    <title>Members Only Events</title>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -71,7 +71,7 @@
                 data-wow-offset="120"
                 data-wow-delay=".7s"
               >
-                Member's Only Events
+                Members Only Events
               </h1>
             </div>
           </div>
@@ -81,33 +81,39 @@
     <!-- rts banner four end -->
 
     <section class="rts-solution-area page-body members-only-events-page-body">
-      <div class="container">
-        <div class="event-wrapper">
+      <div class="event-wrapper masters-event-wrapper">
+        <div class="container">
           <div class="row g-5">
             <div
               class="col-lg-6 wow fadeInUp d-flex flex-column justify-content-center"
               data-wow-offset="120"
               data-wow-delay=".9s"
             >
-              <div class="career-banner-wrapper ">
+              <div class="career-banner-wrapper">
                 <div class="event-date">April 12th - 13th</div>
                 <h2 class="title">Member Member Masters Pro-Am</h2>
                 <p class="disc">
-                  Two Member Scramble paired with a Pro from the Masters. Your
-                  team will have chances to win in 2 formats. The Member Member
-                  scramble format along with the Pro-Am format where your team
-                  score will be added to your pros score. This event will be
-                  fighted based on number of team entries after the tournament
-                  just as we do for Open tournaments.
+                  Two Member Scramble
+                  <span class="highlighted"
+                    >paired with a Pro from the Masters</span
+                  >. Your team will have chances to win in 2 formats. The Member
+                  Member scramble format along with the Pro-Am format where your
+                  team score will be added to your pros score. This event will
+                  be fighted based on number of team entries after the
+                  tournament just as we do for Open tournaments.
                 </p>
                 <p>
                   $140 per team and will include cash payouts for both formats,
                   proximity prizes, skins, draft on Friday evening with drink
                   ticket and appetizers, and lunch on Sunday.
                 </p>
-                <a href="#" class="rts-btn btn-primary btn-bold"
-                  >Sign Up Your Team Here</a
+                <a
+                  href="https://manager.gallusgolf.com/Register/67448/member-member-masters-pro-am"
+                  class="rts-btn btn-primary btn-bold"
+                  target="_blank"
                 >
+                  Sign Up Your Team Here
+                </a>
               </div>
             </div>
             <div
@@ -115,12 +121,204 @@
               data-wow-offset="120"
               data-wow-delay="1s"
             >
-              <div class="thumbnail-top">
+              <div class="thumbnail-top d-flex justify-content-end">
+                <div class="event-image-box masters">
+                  <img
+                    class="masters-logo"
+                    src="assets/images/logo/masters-logo.svg"
+                    alt=""
+                  />
+                </div>
                 <img
                   class="event-image-main"
                   src="images/bunker-shot.jpg"
-                  alt="career"
+                  alt=""
                 />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="event-wrapper match-play-event-wrapper">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-lg-6 mt_md--30 mt_sm--30 wow fadeInUp"
+              data-wow-offset="120"
+              data-wow-delay=".1s"
+            >
+              <div class="thumbnail-top d-flex justify-content-start">
+                <div class="event-image-box match-play">
+                  <img
+                    class="match-play-logo"
+                    src="assets/images/logo/match-play.jpg"
+                    alt=""
+                  />
+                </div>
+                <img
+                  class="event-image-main"
+                  src="images/lucky-shot.jpg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div
+              class="col-lg-6 wow fadeInUp d-flex flex-column justify-content-center"
+              data-wow-offset="120"
+              data-wow-delay=".2s"
+            >
+              <div class="career-banner-wrapper">
+                <div class="event-date">May 1st - July 31st</div>
+                <h2 class="title">Stagg Hill Match Play Tournament</h2>
+                <p class="disc">
+                  Entry fee is $40 per player. Must have an established GHIN
+                  Handicap to sign up or you can choose to play as a zero
+                  handicap if you want to play. Men's Division will be broken
+                  into the following flights by course handicap 0-6 / 7-12 /
+                  13-18 / 19 and above Ladies Division will be broken into
+                  flights based on number of entries and course handicap.
+                  Seating within flights will be based on players index.
+                </p>
+                <p>
+                  Shots given within the matches will be based off of the low
+                  course handicap of the two players. USGA Rules will apply
+                  during play.
+                </p>
+                <hr />
+                <p>
+                  First Round Matches played: May 1-21 <br />
+                  Second Round Matches played: May 22-June 11<br />
+                  Third Round Matches played: June 12- July 9<br />
+                  Final Matches played: July 10-31<br />
+                </p>
+                <a
+                  href="https://manager.gallusgolf.com/Register/67703/stagg-hill-match-play"
+                  class="rts-btn btn-primary btn-bold"
+                  target="_blank"
+                  >Sign Up Your Team Here</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="event-wrapper fourth-wrapper">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-lg-6 wow fadeInUp d-flex flex-column justify-content-center"
+              data-wow-offset="120"
+              data-wow-delay=".1s"
+            >
+              <div class="career-banner-wrapper">
+                <div class="event-date">July 4th</div>
+                <h2 class="title">Stagg Hill 4th of July Flag Tournament</h2>
+                <p>
+                  18-Hole, “Par 72” Tournament. Entry fee is $10 per person.
+                </p>
+                <p>
+                  PUT YOUR NAME on flag and keep your flag until you use “net”
+                  par (72) strokes. When you reach your net par strokes, place
+                  your flag in ground at that point. If “below” net par thru 18,
+                  play on Hole 1 again (with clubhouse permission). FARTHEST
+                  flag WINS!!!! (No. of places depends on number of entries,
+                  also Hacker prize.)
+                </p>
+                <p>
+                  Your “net” par is 72 + your 18 hole handicap, i. e. if you are
+                  a 18 handicap, then your 18-hole net par strokes are 90 gross
+                  total (72 + 18), allowing for your handicap.
+                </p>
+                <p>
+                  If a made putt is your last stroke leave flag on the next tee
+                  box. If last stroke goes in hazard, place flag outside hazard
+                  (and highly visible) at place of entry. If OB, place on
+                  tee-box. If lost, place approximately where lost. Prizes
+                  awarded at clubhouse. Good Luck!
+                </p>
+                <hr />
+                <p>
+                  Tee times for this event will go until 12pm on the 4th. Please
+                  make your own tee times and let us know who will be playing
+                  when you set your tee time.
+                  <a href="tel:7855391041">(785) 539-1041</a>
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-lg-6 mt_md--30 mt_sm--30 wow fadeInUp"
+              data-wow-offset="120"
+              data-wow-delay=".2s"
+            >
+              <div class="thumbnail-top d-flex justify-content-end">
+                <div class="event-image-box fourth">
+                  <img
+                    class="fourth-flags"
+                    src="assets/images/icons/flags.png"
+                    alt=""
+                  />
+                </div>
+                <img
+                  class="event-image-main"
+                  src="images/golfer-under-blue-sky.jpg"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="event-wrapper member-guest-event-wrapper">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-lg-6 mt_md--30 mt_sm--30 wow fadeInUp"
+              data-wow-offset="120"
+              data-wow-delay=".1s"
+            >
+              <div class="thumbnail-top d-flex justify-content-start">
+                <div class="event-image-box match-play">
+                  <img
+                    class="match-play-logo"
+                    src="assets/images/logo/match-play.jpg"
+                    alt=""
+                  />
+                </div>
+                <img
+                  class="event-image-main"
+                  src="images/lucky-shot.jpg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div
+              class="col-lg-6 wow fadeInUp d-flex flex-column justify-content-center"
+              data-wow-offset="120"
+              data-wow-delay=".2s"
+            >
+              <div class="career-banner-wrapper">
+                <div class="event-date">July 19th - 20th</div>
+                <h2 class="title">Stagg Hill Member Guest</h2>
+                <p class="disc">
+                  Format: 2 person sramble on the front nine, shamble on the
+                  back 9, Saturday and Sunday.
+                </p>
+                <p>
+                  Entry Fee: $350 per team includes practice round Friday, Horse
+                  Race Friday at 5pm, 2 tournament rounds, cart, range,
+                  proximity contests, skins game, drink tickets, par 3 shootout
+                  Saturday, lunch Saturday, dinner and calcutta event Saturday
+                  evening, breakfast & lunch on Sunday.
+                </p>
+                <a
+                  href="https://manager.gallusgolf.com/Register/67528/stagg-hill-member-guest-2025"
+                  class="rts-btn btn-primary btn-bold"
+                  target="_blank"
+                  >Sign Up Your Team Here</a
+                >
               </div>
             </div>
           </div>
