Member Only Events page finished.

--- a/members-only-events.html
+++ b/members-only-events.html
@@ -280,16 +280,9 @@
               data-wow-delay=".1s"
             >
               <div class="thumbnail-top d-flex justify-content-start">
-                <div class="event-image-box match-play">
-                  <img
-                    class="match-play-logo"
-                    src="assets/images/logo/match-play.jpg"
-                    alt=""
-                  />
-                </div>
                 <img
                   class="event-image-main"
-                  src="images/lucky-shot.jpg"
+                  src="images/golfer-in-red.jpg"
                   alt=""
                 />
               </div>
@@ -300,8 +293,13 @@
               data-wow-delay=".2s"
             >
               <div class="career-banner-wrapper">
+                <img
+                  class="member-guests-logo"
+                  src="assets/images/logo/member-guest.svg"
+                  alt=""
+                />
                 <div class="event-date">July 19th - 20th</div>
-                <h2 class="title">Stagg Hill Member Guest</h2>
+                <h2 class="title">Stagg Hill Member Guest Tournament</h2>
                 <p class="disc">
                   Format: 2 person sramble on the front nine, shamble on the
                   back 9, Saturday and Sunday.
@@ -317,8 +315,70 @@
                   href="https://manager.gallusgolf.com/Register/67528/stagg-hill-member-guest-2025"
                   class="rts-btn btn-primary btn-bold"
                   target="_blank"
-                  >Sign Up Your Team Here</a
                 >
+                  Sign Up Your Team Here
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="event-wrapper club-championship-wrapper">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-lg-6 wow fadeInUp d-flex flex-column justify-content-center"
+              data-wow-offset="120"
+              data-wow-delay=".1s"
+            >
+              <div class="career-banner-wrapper">
+                <div class="event-date">August 16th - 17th</div>
+                <h2 class="title">Stagg Hill Club Championship</h2>
+                <p class="IKOB-Italic">
+                  Open to all members of Stagg Hill Golf Club.
+                </p>
+                <p>
+                  Entry Fee: $40pp for Club Championship / $20pp extra for
+                  Member Member portion.
+                </p>
+                <p>
+                  Must have an active GHIN hcp to be eligible for net prizes.
+                  Cash payout in each division Open, Sr. Men 50-64, Super Sr.
+                  Men 65+, Ladies, Sr. Ladies. Member Member portion will be
+                  Saturday Only.
+                </p>
+                <p>
+                  Entry includes golf, range balls, cash prizes, & lunch on
+                  Sunday.
+                </p>
+                <a
+                  href="https://manager.gallusgolf.com/Register/67529/stagg-hill-club-championship-2025"
+                  class="rts-btn btn-primary btn-bold"
+                  target="_blank"
+                >
+                  Click Here to Sign Up
+                </a>
+              </div>
+            </div>
+            <div
+              class="col-lg-6 mt_md--30 mt_sm--30 wow fadeInUp"
+              data-wow-offset="120"
+              data-wow-delay=".2s"
+            >
+              <div class="thumbnail-top d-flex justify-content-end">
+                <div class="event-image-box club-championship">
+                  <img
+                    class="club-championship-logo"
+                    src="assets/images/logo/club-championship.jpg"
+                    alt=""
+                  />
+                </div>
+                <img
+                  class="event-image-main"
+                  src="images/golfer-aiming.jpg"
+                  alt=""
+                />
               </div>
             </div>
           </div>
@@ -329,11 +389,11 @@
     <section class="sponsorship-cta">
       <div class="container">
         <div class="row flex-column align-items-center text-center">
-          <img
+          <!-- <img
             src="assets/images/svgs/handshake.svg"
             alt=""
             class="handshake-sticker"
-          />
+          /> -->
           <h3>
             <span class="italicized">Reach out</span> for 2025 sponsorship
             opportunities.
