Contact section finished.

--- a/pro-shop.html
+++ b/pro-shop.html
@@ -205,7 +205,7 @@
               class="foot-joy-logo"
               alt=""
             />
-            <p class="shop-note">In stock now!</p>
+            <p class="shop-note">Select Footjoy in stock now!</p>
           </div>
           <div class="col-9">
             <div class="row g-5">
