--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     >
       <div class="container">
         <div class="text-center-title-bg-white">
-          <h3 class="title">Notices</h3>
+          <h3 class="title">Stagg Hill News</h3>
         </div>
       </div>
       <div class="container">
