Meet The Staff page done. Short of mobile styling, site it done.

--- a/instruction.html
+++ b/instruction.html
@@ -86,15 +86,13 @@
         data-wow-offset="120"
         data-wow-delay=".9s"
       >
-        <div class="pga-member-logo-box">
-          <img
-            class="pga-member-logo"
-            src="assets/images/logo/pga-member-logo.png"
-            alt=""
-          />
-        </div>
         <div class="row g-5 justify-content-between pt-4 lined-row">
           <div class="col-5">
+            <img
+              class="pga-member-logo"
+              src="assets/images/logo/pga-member-logo.svg"
+              alt=""
+            />
             <h3>Lessons with Chad Myers, PGA</h3>
             <p class="shop-note">Call, email, or book online today!</p>
             <ul>
@@ -342,7 +340,11 @@
 
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start">
-              <a href="http://manhattanjrgolf.com/index.html" target="_blank" class="thumbnail h-100">
+              <a
+                href="http://manhattanjrgolf.com/index.html"
+                target="_blank"
+                class="thumbnail h-100"
+              >
                 <div class="image-area">
                   <img
                     loading="lazy"
