--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,11 @@
           <div class="container">
             <div class="row pb--90 g-5">
               <div class="col-lg-4 col-md-6 col-sm-12">
-                <div class="single-location-area-contact">
+                <div
+                  class="single-location-area-contact wow fadeInUp"
+                  data-wow-offset="120"
+                  data-wow-delay=".9s"
+                >
                   <div class="icon">
                     <img
                       class="injectable phone"
@@ -99,7 +103,11 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
-                <div class="single-location-area-contact">
+                <div
+                  class="single-location-area-contact wow fadeInUp"
+                  data-wow-offset="120"
+                  data-wow-delay="1s"
+                >
                   <div class="icon">
                     <img
                       class="injectable pin"
@@ -119,7 +127,11 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
-                <div class="single-location-area-contact">
+                <div
+                  class="single-location-area-contact wow fadeInUp"
+                  data-wow-offset="120"
+                  data-wow-delay="1.1s"
+                >
                   <div class="icon">
                     <img
                       class="injectable envelope"
@@ -141,7 +153,11 @@
       </div>
 
       <div class="rts-google-map-area">
-        <div class="container">
+        <div
+          class="container wow fadeInUp"
+          data-wow-offset="120"
+          data-wow-delay=".1s"
+        >
           <div class="row">
             <div class="col-lg-12">
               <div class="google-map-wrapper">
@@ -169,12 +185,16 @@
       </div>
 
       <div class="contact-area-form-wrapper rts-section-gapTop">
-        <div class="container-contact">
+        <div
+          class="container-contact wow fadeInUp"
+          data-wow-offset="120"
+          data-wow-delay=".1s"
+        >
           <div class="row">
             <div class="col-lg-12">
               <div class="text-center-title-bg-white">
                 <h2 class="title">Get in touch</h2>
-                <p>We’d love to hear from you.</p>
+                <p>We’d love to hear from you!</p>
               </div>
             </div>
             <div class="col-lg-12">
@@ -225,7 +245,7 @@
                   <textarea
                     id="message"
                     name="message"
-                    placeholder="Your message"
+                    placeholder=""
                     required=""
                   ></textarea>
                 </div>
@@ -269,7 +289,38 @@
         </div>
       </div>
     </div>
-
+    <section id="donation-request" class="sponsorship-cta">
+      <div class="container">
+        <div
+          class="row flex-column align-items-center text-center wow fadeInUp"
+          data-wow-offset="120"
+          data-wow-delay=".4s"
+        >
+          <!-- <img
+            src="assets/images/svgs/handshake.svg"
+            alt=""
+            class="handshake-sticker"
+          /> -->
+          <h3>Donation Requests</h3>
+          <p>
+            Use this form to request donations. Please submit your request at
+            least 4 weeks before needed. We receive many inquiries and will do
+            our best to accommodate as many as possible, but please note we may
+            not be able to fulfill all donation requests. Please email completed
+            forms to
+            <a href="mailto:chad@stagghillgolfclub.com"
+              >chad@stagghillgolfclub.com</a
+            >, mail it to Stagg Hill Golf Club, 4441 Stagg Hill Rd., Manhattan,
+            KS 66502 or drop it off in the proshop.
+          </p>
+          <a
+            href="assets/pdfs/Donation-Request-Form.pdf"
+            class="rts-btn btn-primary btn-bold"
+            >Donation Request Form</a
+          >
+        </div>
+      </div>
+    </section>
     <!-- cta area start -->
     <section class="cta blonde">
       <my-cta></my-cta>
