Finished up expandable bio for Chad.

--- a/couples-league.html
+++ b/couples-league.html
@@ -230,7 +230,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">July 4th</span> - No league play for
+                      <span class="date"><s>July 4th</s></span> - No league play for
                       the holiday. 🇺🇸
                     </p>
                   </div>
