--- a/meet-the-staff.html
+++ b/meet-the-staff.html
@@ -84,7 +84,7 @@
       <div class="container">
         <div class="rts-location-contact-area pt--70">
           <div class="container">
-            <div class="row pb--90 g-5">
+            <div class="row g-5">
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div
                   class="single-location-area-contact wow fadeInUp"
@@ -118,6 +118,42 @@
                         alt=""
                       />chad@stagghillgolfclub.com
                     </a>
+                  </div>
+                  <div class="collapsible-wrapper">
+                    <div class="collapse" id="collapseExample">
+                      <div class="text-center">
+                        - Kansas State University '96 -<br />
+                        Chad is a Member of the PGA of America since 2001 who
+                        grew up in Manhattan playing golf at Stagg Hill. Chad
+                        played golf for Manhattan High School (6A Team Champs
+                        '91), Garden City C.C., Cloud County C.C. where he
+                        quailified for NJCAA Div.II Nationals twice, and then
+                        walked on to play at Kansas State University. Chad is a
+                        member of the Midwest Section PGA where he has served on
+                        the Board of Directors for over 16 years including
+                        serving as the President for two years. Teaching the
+                        game is a passion for Chad who has taught for over 20
+                        years. He has taught juniors, beginners, high school
+                        players (many of which went on to play collegiately) and
+                        some college players. Chad is married to his wife Kaylee
+                        and they have two daughters both of whom play and enjoy
+                        the great game of golf!
+                      </div>
+                      <div class="grad"></div>
+                    </div>
+                    <p>
+                      <button
+                        class="chad-btn"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseExample"
+                        aria-expanded="false"
+                        aria-controls="collapseExample"
+                      >
+                        Show More
+                        <i class="fa-duotone fa-regular fa-chevron-down"></i>
+                      </button>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -178,7 +214,11 @@
     </div>
 
     <section class="page-body board">
-      <div class="container">
+      <div
+        class="container wow fadeInUp"
+        data-wow-offset="120"
+        data-wow-delay=".1s"
+      >
         <div class="row g-5 justify-content-between">
           <div class="col-12 col-sm-6">
             <h3>Board of Directors</h3>
@@ -200,7 +240,11 @@
           </div>
         </div>
       </div>
-      <div class="container chair-container">
+      <div
+        class="container chair-container wow fadeInUp"
+        data-wow-offset="120"
+        data-wow-delay=".1s"
+      >
         <div class="row g-5 justify-content-between">
           <div class="col-12 col-sm-6">
             <h3>Chair Members</h3>
@@ -215,7 +259,11 @@
           </div>
         </div>
       </div>
-      <div class="container chair-container">
+      <div
+        class="container chair-container wow fadeInUp"
+        data-wow-offset="120"
+        data-wow-delay=".1s"
+      >
         <div class="row g-5 justify-content-between">
           <div class="col-12 col-sm-6">
             <h3>Financials</h3>
@@ -231,7 +279,12 @@
     </section>
 
     <section id="join-the-team" class="page-body board join-the-team">
-      <div class="container">
+      <div
+        class="container wow fadeInUp"
+        data-wow-offset="120"
+        data-wow-delay=".1s"
+      >
+      
         <div class="row g-5 justify-content-between">
           <div class="col-12 col-sm-6">
             <h3>Join Our Team</h3>
