--- a/ladies-evening-league.html
+++ b/ladies-evening-league.html
@@ -114,13 +114,8 @@
             <p>
               All play will be from the forward Yellow Tees unless otherwise
               specified. This league night is designed to get ladies on the golf
-              course on a regular basis and have some
-              <img
-                class="fun fun-2 injectable"
-                src="/assets/images/svgs/fun-fun.svg"
-                alt=""
-              />
-              by playing formats that are low stress.
+              course on a regular basis and have some fun by playing formats
+              that are low stress.
             </p>
             <p>
               All ladies are welcome to come and play in our league each week.
@@ -137,8 +132,8 @@
             <div class="title-center-style-two">
               <h2 class="title">2025 Ladies Evening League Schedule</h2>
               <div class="schedule-note">
-                We will tee off at 6pm each week on Thursday evening. Check in begins at
-                5:30. $10 for members and $15 for non-members.
+                We will tee off at 6pm each week on Thursday evening. Check in
+                begins at 5:30. $10 for members and $15 for non-members.
               </div>
             </div>
             <div class="col-lg-12">
@@ -288,8 +283,9 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <p>
-                      <span class="date">July 31st</span> - 4 Lady Scramble and Shamble - Scramble par 4’s &
-                      5’s and shamble par 3’s. Count 1 score on par 3’s.
+                      <span class="date">July 31st</span> - 4 Lady Scramble and
+                      Shamble - Scramble par 4’s & 5’s and shamble par 3’s.
+                      Count 1 score on par 3’s.
                     </p>
                   </div>
                   <div class="timeline-dot">
